Added WebSauceTest class for the testing of saucedemo.com website. Added LoginPage and LoginPageBase classes to represent the first login page of the website. Added a loginTest() method to test the login process for all available user accounts with the help of a DataProvider.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ target/agent
 !**/src/test/**/target/
 reports/
 reports/gallery-lib/.DS_Store
+htmls/
 ### IntelliJ IDEA ###
 .idea
 .idea/.gitignore
