--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -2,7 +2,7 @@
 #================= Configuration v2 ==================#
 #=====================================================#
 #=================== Global configuration ============#
-url=https://www.gsmarena.com
+url=https://www.saucedemo.com/
 capabilities.browserName=chrome
 capabilities.browserVersion=NULL
 selenium_url=http://localhost:4444/wd/hub
@@ -16,7 +16,7 @@ app_version=
 #=====================================================#
 #=============== Environment configuration ===========#
 env=DEMO
-DEMO.base=https://www.gsmarena.com
+DEMO.base=https://www.saucedemo.com/
 DEMO.api_url=https://jsonplaceholder.typicode.com
 STAG.api_url=
 DEMO.soap_url=https://www.crcind.com:443/csp/samples/SOAP.Demo.cls
