Replaced hardcoded credentials in the DataProvider with test data variables from the _testdata.properties file. Removed Soft Asserts as they are not needed for the loginTest() and used regular Asserts instead. Removed unused methods.

--- a/src/main/resources/_testdata.properties
+++ b/src/main/resources/_testdata.properties
@@ -1,5 +1,12 @@
 #===============================================================#
 #========================== Test data ==========================#
 #===============================================================#
-test_credentials=test@gmail.com/{crypt:8O9iA4+f3nMzz85szmvKmQ==}
-
+test_credentials=test@gmail.com/{crypt:8O9iA4+f3nMzz85szmvKmQ
+user1.name=standard_user
+user1.pwd=secret_sauce
+user2.name=locked_out_user
+user2.pwd=secret_sauce
+user3.name=problem_user
+user3.pwd=secret_sauce
+user4.name=performance_glitch_user
+user4.pwd=secret_sauce
