Created 5 test cases for the Sauce Demo Website. Implemented custom data provider with .xlsx files. Implemented page objects for the test cases. Implemented a TopMenu AbstractUIObject. Configured properties files.

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -39,7 +39,7 @@ init_retry_interval=1
 #=====================================================#
 #uncomment and change udid and deviceName for Android test
 #============ Android Local Mobile ===================#
-#selenium_url=http://localhost:4723/wd/hub
+#selenium_url=http://localhost:4723
 #capabilities.automationName=uiautomator2
 #capabilities.deviceName=<phone_name>
 #capabilities.udid=<phone_udid>
