Updated Pages constructors to use a page opening strategy by elements. Fixed pages initialization to use custom page factory.

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -47,6 +47,7 @@ capabilities.automationName=uiautomator2
 capabilities.platformName=ANDROID
 capabilities.appPackage=com.google.android.calendar
 capabilities.appActivity=com.android.calendar.LaunchActivity
+#capabilities.noReset=true
 #=====================================================#
 #uncomment and change deviceName and platformVersion for iOS test
 #======== Local Run for iOS Mobile ===============#
