Moved open strategy to global configuration.

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -13,6 +13,7 @@ app_version=
 #thread_count=1
 #desired thread count for data provider(s). If commented "data-provider-thread-count" value from TestNG suite xml is used.
 #data_provider_thread_count=1
+page_opening_strategy=BY_ELEMENT
 #=====================================================#
 #=============== Environment configuration ===========#
 env=DEMO
